fix: Footer display -Change icons spacing -Corrected space between icons div and added padding to the bottom of the footer div

--- a/styles.sass
+++ b/styles.sass
@@ -30,10 +30,11 @@ $open-sans: 'Open Sans', sans-serif
         color: white
         display: flex
         justify-content: space-around
-        height: 700px
+        height: fit-content
         flex-direction: column
         bottom: 0
         padding-top: 150px
+        padding-bottom: 50px
 
         .footer__vertical-alignment
             display: flex
@@ -44,6 +45,7 @@ $open-sans: 'Open Sans', sans-serif
             display: flex
             flex-direction: column
             justify-content: center
+            align-items: center
             height: fit-content
 
     .button-card
@@ -153,11 +155,12 @@ $open-sans: 'Open Sans', sans-serif
     .icons
         display: flex
         flex-direction: row
-        justify-content: space-around
-        height: fit-content
+        justify-content: space-evenly
+        padding-top: 10%
+        height: 80px
+        width: 100%
         svg
             width: 13%
-            height: 32%
 
 @media (min-width: 1440px)
 
@@ -233,7 +236,7 @@ $open-sans: 'Open Sans', sans-serif
             color: white
             border-style: none
             background-color: $Pink
-             width: 20%
+            width: 20%
             height: 30%
             border-radius: 20px
             font-weight: 600
@@ -271,4 +274,3 @@ $open-sans: 'Open Sans', sans-serif
             position: relative
             left: 40%
             top: -900px
-
